[gd_scene load_steps=28 format=2]

[ext_resource path="res://Sprites/Enemy/Slime/Sprites/slime-idle-0.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Enemy/Slime/Sprites/slime-idle-1.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Enemy/Slime/Sprites/slime-idle-2.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Enemy/Slime/Sprites/slime-idle-3.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Enemy/Slime/Sprites/slime-move-2.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Enemy/Slime/Sprites/slime-move-3.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Enemy/Slime/Sprites/slime-move-1.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Enemy/Slime/Sprites/slime-move-0.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Enemy/Slime/Sprites/slime-die-2.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Enemy/Slime/Sprites/slime-die-3.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Enemy/Slime/Sprites/slime-attack-4.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Enemy/Slime/Sprites/slime-attack-0.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Enemy/Slime/Sprites/slime-attack-1.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Enemy/Slime/Sprites/slime-attack-2.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Enemy/Slime/Sprites/slime-attack-3.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Enemy/Slime/Sprites/slime-die-0.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Enemy/Slime/Sprites/slime-die-1.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Enemy/Slime/Sprites/slime-hurt-2.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Enemy/Slime/Sprites/slime-hurt-0.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Enemy/Slime/Sprites/slime-hurt-1.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Enemy/Slime/Sprites/slime-hurt-3.png" type="Texture" id=21]
[ext_resource path="res://Scripts/Enemies/Slime/StateMachine.gd" type="Script" id=22]
[ext_resource path="res://Scripts/Enemies/Slime/Slime.gd" type="Script" id=23]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 11 ) ],
"loop": false,
"name": "attack",
"speed": 13.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 17 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": false,
"name": "die",
"speed": 10.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 20 ), ExtResource( 18 ), ExtResource( 21 ) ],
"loop": false,
"name": "hurt",
"speed": 10.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 7.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "move",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10.5, 11 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 15.25, 7 )

[sub_resource type="Animation" id=4]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Body:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 0.670588 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.670588 ) ]
}

[node name="Slime" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 3
script = ExtResource( 23 )
direction = -1

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 22 )

[node name="Body" type="Position2D" parent="."]
modulate = Color( 1, 1, 1, 0.670588 )
position = Vector2( 0, -9 )

[node name="Sprite" type="AnimatedSprite" parent="Body"]
position = Vector2( -7.15256e-07, -6.75 )
scale = Vector2( 1.3125, 1.54 )
frames = SubResource( 1 )
animation = "attack"
frame = 4
playing = true
flip_h = true

[node name="AttackArea" type="Area2D" parent="Body"]
position = Vector2( 0, 9 )
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/AttackArea"]
position = Vector2( 10.5, -8 )
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2.25, -6 )
shape = SubResource( 3 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( 0.499999, 0 )
scale = Vector2( 1.45, 1 )

[node name="BumpCooldown" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/DamageEffect = SubResource( 4 )

[connection signal="animation_finished" from="Body/Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="body_entered" from="Body/AttackArea" to="." method="_on_AttackArea_body_entered"]
[connection signal="screen_entered" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_exited"]
